# drf-boilerplate

./: .gitignore  Dockerfile  README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yaml
project/: settings.py  urls.py
user/: admin.py  models.py  urls.py
user/migrations/: 0001_initial.py
user/serializers/: custom_user.py  token.py
user/views/: custom_user.py
